src/index.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  scroll-behavior: smooth;
}

body {
  font-size: 16px;
  font-family: monospace;
}

/* NAVIGATION */

.nav {
  display: flex;
  width: 100%;
  height: 10vh;
  align-items: center;
  padding: 20px 40px;
  box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.1);
  background-color: white;
  color: black;
}

.nav--dark {
  background-color: black;
  color: white;
  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
}

.nav--logo {
  margin-right: auto;
  font-size: 1.7rem;
}

.nav--links {
  display: flex;
}

.nav--links--dark > li > a {
  color: white;
}

.nav--link {
  list-style-type: none;
  margin-right: 20px;
  font-size: 1.1rem;
}

.nav--link > a {
  color: black;
  text-decoration: none;
}

.nav--link:last-of-type {
  margin-right: 0px;
}

.mode--switch {
  margin-left: 20px;
  margin-right: 10px;
}

.mode--switch:hover {
  cursor: pointer;
}

/* HERO/LANDING */

.hero {
  height: 90vh;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.hero--dark {
  background-color: black;
  color: white;
}

.hero--heading {
  font-size: 3.5rem;
  text-align: center;
}

.hero--btn {
  margin-top: 20px;
  padding: 20px 50px;
  border-radius: 100px;
  border: none;
  font-size: 1.5rem;
  background-color: black;
  color: white;
}

.hero--btn:hover {
  cursor: pointer;
}

.hero--btn--dark {
  background-color: white;
  color: black;
}

/* PROJECTS */

.projects {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  justify-content: center;
  align-items: center;
  height: 100vh;
  width: 100%;
  padding: 50px 200px;
  gap: 10px;
  background-color: white;
  color: black;
}

.projects--dark {
  background-color: black;
  color: white;
  border: 1px solid white;
}

.project {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  flex-basis: 33.333333%;
  background-color: black;
  color: white;
  border-radius: 5px;
  border: 1px solid rgba(255, 255, 255, 0.2);
  overflow: hidden;
}

.project--img {
  width: 100%;
  height: 250px;
  border-radius: 5px;
  object-fit: cover;
  transition: transform .5s;
}

.project--overlay {
  transition: .5s ease;
  opacity: 0;
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.project:hover .project--img {
  opacity: 0.3;
  transform: scale(1.2);
}

.project:hover .project--overlay {
  opacity: 1;
}

.project--name {
  font-size: 1.3rem;
}

.project--btn {
  margin-top: 10px;
  padding: 5px 25px;
  border-radius: 5px;
  border: none;
}

/* ABOUT */

.about {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 0 200px;
  height: 100vh;
  width: 100%;
  background-color: black;
  color: white;
}

.about--dark {
  background-color: white;
  color: black;
}

.about--title {
  font-size: 3.5rem;
  margin-bottom: 20px;
}

.about--text {
  margin-top: 10px;
  margin-bottom: 10px;
}

.about--icons {
  margin-top: 50px;
}

.about--icon {
  margin-right: 15px;
  font-size: 3rem;
}

/* SKILLS */

.skills {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100vh;
  width: 100%;
  background-color: black;
  color: white;
}

.skills--dark {
  background-color: white;
  color: black;
}

.skills--title {
  font-size: 3.5rem;
  margin-bottom: 50px;
}

.skills--wrapper {
  display: grid;
  grid-template-columns: 1fr 1fr;
  align-items: center;
  justify-content: center;
  gap: 10px;
}

.skill {
  text-align: center;
  border: 2px solid white;
  border-radius: 5px;
  padding: 15px 25px;
}

.skill--dark {
  border: 2px solid black;
}

/* CONTACT */

.contact {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  height: 95vh;
  width: 100%;
  background-color: white;
  color: black;
}

.contact--dark {
  background-color: black;
  color: white;
}

.contact--title {
  font-size: 3.5rem;
  margin-bottom: 50px;
}

.contact--form {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 500px;
}

.contact--name, .contact--email, .contact--message {
  width: 100%;
  max-width: 100%;
  height: 30px;
  margin-bottom: 10px;
  padding: 0 10px;
  border-radius: 5px;
  border: none;
  background-color: black;
  color: white;
}


.contact--name:focus, .contact--email:focus, .contact--message:focus {
  outline: none;
}

.contact--message {
  max-height: 200px;
  height: 200px;
  padding: 10px;
}

.contact--btn {
  width: 100%;
  padding: 10px 0;
  border-radius: 5px;
  border: none;
  background-color: white;
  font-size: 1.2rem;
  background-color: black;
  color: white;
}

.contact--name--dark, .contact--email--dark, .contact--message--dark, .contact--btn--dark {
  background-color: white;
  color: black;
}

.contact--name::placeholder, .contact--email::placeholder, .contact--message::placeholder {
  color: white;
}

.contact--name--dark::placeholder, .contact--email--dark::placeholder, .contact--message--dark::placeholder {
  color: black;
}

/* FOOTER */

.footer {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 5vh;
  width: 100%;
  background-color: black;
  color: white;
}

.footer--dark {
  background-color: white;
  color: black;
}

.footer--text {
  font-size: 1.3rem;
}

/* RESPONSIVE */

@media only screen and (max-width: 480px) {
  /* hide element on small screens */
  .nav--logo {
    font-size: 1rem;
  }

  .hero--heading {
    font-size: 1.3rem;
  }

  .hero--btn {
    padding: 5px 25px;
    font-size: 1rem;
  }

  .about--title {
    font-size: 1.3rem;
  }

  .about {
    padding: 0 50px;
  }

  .about--text {
    font-size: 0.5rem;
  }

  .about--icon {
    font-size: 1rem;
  }

  .projects {
    padding: 20px;
    row-gap: 20px;
    height: 100%;
    grid-template-columns: 1fr;
  }

  .skills--wrapper {
    grid-template-columns: 1fr;
    font-size: 0.8rem;
  }

  .skill {
    width: 100%;
    text-align: center;
    padding: 5px;
  }

  .skills--title {
    font-size: 1.3rem;
  }

  .contact--title {
    font-size: 1.3rem;
  }

  .contact--name, .contact--email, .contact--message, .contact--btn {
    width: 60%;
  }

  .contact--name::placeholder, .contact--email::placeholder, .contact--message::placeholder {
    font-size: 0.6rem;
  }

  .contact--btn {
    font-size: 1rem;
  }

  .footer--text {
    font-size: 0.8rem;
  }
  }
  

